updated banner to prevent height 100% over stretch

--- a/app/assets/stylesheets/components/banner.css.scss
+++ b/app/assets/stylesheets/components/banner.css.scss
@@ -2,10 +2,9 @@
   background: url("atlrug_meetup_crop.jpg") no-repeat scroll center top #272727;
   background-size: cover;
   color: #fff;
-  height: 100%;
   width: 100%;
   margin: 0 auto; }
-#banner 				{  height: 100%; position: relative; padding: 100px 0; width: 100%;
+#banner 				{  position: relative; padding: 100px 0; width: 100%;
 	h1 					{  color: #fff; border-bottom: 3px solid $pink; padding-bottom: 0;  }
 	h4 					{  font-family: 'Roboto Slab', sans-serif; font-weight: 400;  }
 }
